RESOLVED FIXED198637
Error message for non-callable Proxy `construct` trap is misleading
https://bugs.webkit.org/show_bug.cgi?id=198637
Summary Error message for non-callable Proxy `construct` trap is misleading
Alexey Shvayka
Reported 2019-06-06 17:33:09 PDT
Error message for non-callable Proxy `construct` trap is misleading
Attachments
Patch (3.20 KB, patch)
2019-06-06 17:46 PDT, Alexey Shvayka
no flags
Archive of layout-test-results from ews210 for win-future (13.73 MB, application/zip)
2019-06-07 01:16 PDT, EWS Watchlist
no flags
Alexey Shvayka
Comment 1 2019-06-06 17:46:13 PDT
Saam Barati
Comment 2 2019-06-06 20:06:27 PDT
Comment on attachment 371544 [details] Patch r=me
EWS Watchlist
Comment 3 2019-06-06 20:42:15 PDT
Comment on attachment 371544 [details] Patch Attachment 371544 [details] did not pass jsc-ews (mac): Output: https://webkit-queues.webkit.org/results/12401453 New failing tests: mozilla-tests.yaml/js1_5/Array/regress-101964.js.mozilla-dfg-eager-no-cjit-validate-phases apiTests
EWS Watchlist
Comment 4 2019-06-07 01:16:14 PDT
Comment on attachment 371544 [details] Patch Attachment 371544 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/12403535 New failing tests: js/error-should-not-strong-reference-global-object.html
EWS Watchlist
Comment 5 2019-06-07 01:16:16 PDT
Created attachment 371575 [details] Archive of layout-test-results from ews210 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews210 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Keith Miller
Comment 6 2019-06-11 14:12:50 PDT
Comment on attachment 371544 [details] Patch Those failures seem unrelated to your patch.
WebKit Commit Bot
Comment 7 2019-06-11 14:42:47 PDT
Comment on attachment 371544 [details] Patch Clearing flags on attachment: 371544 Committed r246333: <https://trac.webkit.org/changeset/246333>
WebKit Commit Bot
Comment 8 2019-06-11 14:42:49 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9 2019-06-11 14:45:07 PDT
Note You need to log in before you can comment on or make changes to this bug.