Error message for non-callable Proxy `construct` trap is misleading https://bugs.webkit.org/show_bug.cgi?id=198637

Patch by Alexey Shvayka <shvaikalesh@gmail.com> on 2019-06-11
Reviewed by Saam Barati.

JSTests:

* stress/proxy-construct.js:

Source/JavaScriptCore:

Just like other traps, Proxy `construct` trap is invoked with [[Call]], not [[Construct]].

* runtime/ProxyObject.cpp:
(JSC::performProxyConstruct): Tweak error message.

Canonical link: https://commits.webkit.org/212749@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246333 268f45cc-cd09-0410-ab3c-d52691b4dbfc