JSTests/stress/proxy-construct.js
@@ -15,7 +15,7 @@ function assert(b) {
             new proxy;
         } catch(e) {
             threw = true;
-            assert(e.toString() === "TypeError: 'construct' property of a Proxy's handler should be constructible");
+            assert(e.toString() === "TypeError: 'construct' property of a Proxy's handler should be callable");
         }
         assert(threw);
     }
@@ -33,7 +33,7 @@ function assert(b) {
             new proxy;
         } catch(e) {
             threw = true;
-            assert(e.toString() === "TypeError: 'construct' property of a Proxy's handler should be constructible");
+            assert(e.toString() === "TypeError: 'construct' property of a Proxy's handler should be callable");
         }
         assert(threw);
     }
